--- a/setup.cfg
+++ b/setup.cfg
@@ -53,7 +53,7 @@ install_requires =
     pytz
     requests >= 1.0.0
     six
-    importlib_resources = >= 5.12, < 5.13
+    importlib_resources >= 5.12, < 5.13
     xmlschema >= 1.2.1
 
 
