--- a/setup.cfg
+++ b/setup.cfg
@@ -46,15 +46,15 @@ scripts =
     tools/parse_xsd2.py
 python_requires = >=3.6, <4
 install_requires =
-    cryptography >= 1.4
-    defusedxml
-    pyOpenSSL
-    python-dateutil
-    pytz
-    requests >= 1.0.0
-    six
-    importlib_resources >= 5.12, < 5.13
-    xmlschema >= 1.2.1
+    cryptography >= 36.0.2, < 36.0.3
+    defusedxml  >= 0.7.1, < 0.7.2
+    pyOpenSSL >= 22.0.0, < 22.0.1
+    python-dateutil >= 2.8.2, < 2.8.3
+    pytz >= 2021.3, < 2021.4
+    requests >= 2.28.0, < 2.28.1
+    six >= 1.16.0, < 1.16.1
+    importlib_resources >= 5.6.0, < 5.6.1
+    xmlschema >= 1.10.0, < 1.10.1
 
 
 [options.packages.find]
