Pin more python libraries

--- a/setup.cfg
+++ b/setup.cfg
@@ -46,16 +46,16 @@ scripts =
     tools/parse_xsd2.py
 python_requires = >=3.6, <4
 install_requires =
-    cryptography >= 1.4
+    cryptography == 39.0.2
     defusedxml
-    pyOpenSSL
+    pyOpenSSL == 23.0.0
     python-dateutil
     pytz
     requests >= 1.0.0
     six
-    importlib_resources == 5.13.0
-    xmlschema >= 1.2.1
-
+    importlib_resources == 5.12.0
+    xmlschema == 2.2.2
+    elementpath == 4.0.1
 
 [options.packages.find]
 where = src
