--- a/setup.cfg
+++ b/setup.cfg
@@ -56,6 +56,11 @@ install_requires =
     importlib_resources == 5.12.0
     xmlschema == 2.2.2
     elementpath == 4.0.1
+    pyasn1 == 0.4.8
+    pyasn1-modules == 0.2.8
+    pyparsing == 3.0.9
+    websocket-client == 1.5.1
+
 
 [options.packages.find]
 where = src
