Pin even more libraries

--- a/setup.cfg
+++ b/setup.cfg
@@ -60,6 +60,17 @@ install_requires =
     pyasn1-modules == 0.2.8
     pyparsing == 3.0.9
     websocket-client == 1.5.1
+    asgiref == 3.6.0
+    cachetools == 5.3.0
+    Deprecated == 1.2.13
+    google-auth == 2.16.2
+    httplib2 == 0.21.0
+    jwcrypto == 1.4.2
+    prometheus-client == 0.16.0
+    python-crontab == 2.7.1
+    pytz == 2022.7.1
+    PyYAML == 6.0
+    zipp == 3.15.0
 
 
 [options.packages.find]
