--- a/setup.cfg
+++ b/setup.cfg
@@ -65,12 +65,12 @@ install_requires =
     Deprecated == 1.2.13
     google-auth == 2.16.2
     httplib2 == 0.21.0
-    jwcrypto == 1.4.2
-    prometheus-client == 0.16.0
-    python-crontab == 2.7.1
-    pytz == 2022.7.1
-    PyYAML == 6.0
-    zipp == 3.15.0
+    # jwcrypto == 1.4.2
+    # prometheus-client == 0.16.0
+    # python-crontab == 2.7.1
+    # pytz == 2022.7.1
+    # PyYAML == 6.0
+    # zipp == 3.15.0
 
 
 [options.packages.find]
