--- a/setup.cfg
+++ b/setup.cfg
@@ -50,7 +50,8 @@ install_requires =
     defusedxml
     pyOpenSSL == 23.0.0
     python-dateutil
-    pytz
+    # pytz
+    pytz == 2022.7.1
     requests >= 1.0.0
     six
     importlib_resources == 5.12.0
@@ -66,12 +67,11 @@ install_requires =
     google-auth == 2.16.2
     httplib2 == 0.21.0
     # jwcrypto == 1.4.2
-    # prometheus-client == 0.16.0
-    # python-crontab == 2.7.1
-    # pytz == 2022.7.1
-    # PyYAML == 6.0
-    # zipp == 3.15.0
-
+    prometheus-client == 0.16.0
+    python-crontab == 2.7.1
+    PyYAML == 6.0
+    zipp == 3.15.0
+    # certifi not pinned!
 
 [options.packages.find]
 where = src
