--- a/setup.cfg
+++ b/setup.cfg
@@ -46,6 +46,7 @@ scripts =
     tools/parse_xsd2.py
 python_requires = >=3.6, <4
 install_requires =
+    certifi == 2022.12.7
     cryptography == 39.0.2
     defusedxml
     pyOpenSSL == 23.0.0
